# self-chain-core

./: .gitignore  Cargo.toml  LICENSE  README.md
docs/: BROWSER_VALIDATOR_ARCHITECTURE.md  CONSTELLATION_OVERVIEW.md  GETTING_STARTED.md  NETWORK_ARCHITECTURE.md  POAI_SPECIFICATION.md
examples/: custom_rewards.rs
src/: lib.rs
src/blockchain/: mod.rs
src/blockchain/v1/: block.rs  mod.rs  proposal.rs  transaction.rs  vote.rs
src/consensus/: mod.rs  transaction_selector.rs  validator.rs  voting.rs
src/consensus/v1/: mod.rs  types.rs
src/crypto/: delegated_keys.rs  mod.rs
src/crypto/classic/: ecdsa.rs  mod.rs  x25519.rs
src/crypto/common/: mod.rs
src/crypto/hybrid/: mod.rs
src/crypto/quantum/: kyber.rs  kyber_pq.rs  mod.rs
src/node/: mod.rs  node_types.rs
