[package]
name = "self-chain-core"
version = "0.1.0"
edition = "2021"
description = "SELF Chain - Proof-of-AI Consensus Blockchain Platform"
license = "LicenseRef-Proprietary"
repository = "https://github.com/self-technology/self-chain-core"
keywords = ["blockchain", "consensus", "ai", "poai", "crypto"]
categories = ["cryptography", "network-programming"]

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.36", features = ["full"] }
async-trait = "0.1.58"

# Cryptography
secp256k1 = { version = "0.31", features = ["rand"] }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
x25519-dalek = { version = "2.0.0", features = ["reusable_secrets", "zeroize"] }
sha2 = "0.10.2"
sha3 = "0.10.8"
hmac = "0.12"
hex = "0.4.3"
base64 = "0.22"
zeroize = "1.6.0"
bitcoin_hashes = "0.14"

# Post-quantum cryptography
pqcrypto-traits = "0.3.5"
pqcrypto-sphincsplus = "0.7.1"
pqcrypto-kyber = "0.8.1"

# Random number generation
rand = "0.9.1"
rand_0_8 = { package = "rand", version = "0.8" }
rand_core_0_8 = { package = "rand_core", version = "0.6" }

# Error handling
anyhow = { version = "1.0.73", features = ["std"] }
thiserror = "2.0"

# Logging
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "std"] }
log = "0.4"

# Metrics
prometheus = "0.14.0"

# Caching
lru = "0.12"

# Time
chrono = { version = "0.4.31", features = ["serde"] }

# Networking (optional - for full node implementations)
libp2p = { version = "0.56", features = [
    "gossipsub",
    "mdns",
    "noise",
    "yamux",
    "tcp",
    "tokio",
    "request-response",
    "identify",
    "ping",
    "macros",
], default-features = false, optional = true }

# HTTP server (optional - for coordinator)
axum = { version = "0.7", features = ["multipart"], optional = true }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", features = ["cors", "trace"], optional = true }

# Database (optional - for persistent storage)
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "macros", "migrate", "uuid", "chrono"], optional = true }

[features]
default = []
full-node = ["libp2p"]
coordinator = ["axum", "tower", "tower-http", "sqlx"]
all = ["full-node", "coordinator"]

[lib]
name = "self_chain_core"

[[example]]
name = "custom_rewards"
path = "examples/custom_rewards.rs"

